<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#33DFFF"
    tools:context="com.Yam.ESwim.MainActivity">

    <EditText
        android:id="@+id/old_email"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        tools:layout_editor_absoluteY="82dp"
        tools:layout_editor_absoluteX="8dp"
        android:layout_above="@+id/password"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black"
        android:layout_marginBottom="17dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:hint="@string/prompt_password"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        tools:layout_editor_absoluteX="126dp"
        tools:layout_editor_absoluteY="125dp"
        android:textColor="@android:color/black"
        android:layout_above="@+id/newPassword"
        android:layout_toEndOf="@+id/progressBar" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:hint="@string/new_pass"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="168dp"
        android:layout_above="@+id/changePass"
        android:textColor="@android:color/black"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/changePass"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_change"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        tools:layout_editor_absoluteY="211dp"
        tools:layout_editor_absoluteX="199dp"
        android:layout_above="@+id/remove"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/remove"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_remove"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        tools:layout_editor_absoluteY="259dp"
        tools:layout_editor_absoluteX="199dp"
        android:layout_above="@+id/change_password_button"
        android:layout_alignStart="@+id/changePass" />

    <Button
        android:id="@+id/change_password_button"
        style="?android:textAppearanceSmall"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="312dp"
        android:textColor="@android:color/black"
        android:layout_above="@+id/remove_user_button"
        android:layout_alignStart="@+id/remove_user_button" />

    <Button
        android:id="@+id/remove_user_button"
        style="?android:textAppearanceSmall"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/remove_user"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="408dp"
        android:layout_above="@+id/sign_out"
        android:textColor="@android:color/black"
        android:layout_alignStart="@+id/sign_out" />


    <TextView
        android:id="@+id/useremail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/old_email"
        android:layout_marginBottom="247dp"
        android:gravity="center"
        android:hint="@string/email_id"
        android:textSize="25sp"
        android:textColor="@android:color/black"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/sign_out"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/white"
        android:scrollbarThumbHorizontal="@drawable/bg_gradient"
        android:scrollbarThumbVertical="@drawable/bg_gradient"
        android:scrollbarTrackHorizontal="@drawable/bg_gradient"
        android:scrollbarTrackVertical="@drawable/bg_gradient"
        android:text="@string/btn_sign_out"
        android:textColor="@android:color/black"
        android:textColorHighlight="@color/backgroundcolor"
        android:textColorHint="@color/backgroundcolor"
        android:textColorLink="@color/backgroundcolor"
        android:textCursorDrawable="@drawable/bg_gradient" />

</RelativeLayout>
